--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -8,6 +8,7 @@
     "ali-oss": "^6.16.0",
     "axios": "^0.21.1",
     "log4js": "^6.3.0",
+    "marked": "^13.0.1",
     "randomcolor": "^0.6.2",
     "socket.io": "^4.1.3",
     "xss": "^1.0.9"
